# collet-shell

./: .gitignore  Cargo.toml
crates/shell/: Cargo.toml
crates/shell/src/: main.rs  render.rs  system.rs
crates/shell/src/ipc/: handler.rs  mod.rs
crates/shell/src/surfaces/: control_bar.rs  dock.rs  lock_screen.rs  mod.rs
preview/: control_bar.html  dock.html  live.html
