[package]
name = "collet-shell"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Collet OS Shell — the operating system's face"

[dependencies]
# Webview engine (WKWebView on macOS, webkit2gtk on Linux)
wry = "0.54"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Window management (macOS preview)
tao = "0.35"

# IPC serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Asset encoding
base64 = "0.22"

# Collet component library
components = { path = "../../../../lab/rust-frontend/crates/components" }
design-system = { path = "../../../../lab/rust-frontend/crates/design-system" }
rr-core = { path = "../../../../lab/rust-frontend/crates/core", package = "core" }

# App discovery (.desktop files)
freedesktop-desktop-entry = { version = "0.8", default-features = false }

# Linux-only dependencies
[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
gdk = "0.18"
glib = "0.20"
gtk-layer-shell = "0.8"

[lints]
workspace = true
